# Stanislava_Bobruskina_207_HW_1

./: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  figure.cpp  figure.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rnd.h  test01.txt  test01_out1.txt  test01_out2.txt  test02.txt  test02_out1.txt  test02_out2.txt  test03.txt  test03_out1.txt  test03_out2.txt  test04.txt  test04_out1.txt  test04_out2.txt  test05.txt  test05_out1.txt  test05_out2.txt  tetrahedron.cpp  tetrahedron.h
