cmake_minimum_required(VERSION 3.20)
project(Task_1_Bobruskina_abc)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task_1_Bobruskina_abc
        main.cpp
        ball.cpp
        ball.h 
        parallelepiped.cpp
        parallelepiped.h
        tetrahedron.cpp
        tetrahedron.h
        figure.cpp
        figure.h
        container.cpp
        container.h
        rnd.h)
